2015-05-05  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r22281.

	* src/html/classic/gsad.xsl (login_page): Correct typo in enctype, to
	prevent form text from being escaped.  This was preventing login with
	passwords that contain a space, for example.

2015-05-04  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r22273.

	* src/gsad.c (main): Add --no-redirect option. Make --redirect the
	default behaviour.

2015-04-30  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* src/html/classic/help.xsl, CMakeLists.txt: Set version to 6.0.3.

2015-04-30  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the gsa 6.0.2 release.

	* CHANGES: Updated.

2015-04-29  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r22250.

	* src/html/classic/help.xsl (new_permission.html): Add section about
	the "Create Multiple Permissions" dialog.

2015-04-29  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r22248.

	* src/gsad_omp.c (create_permissions_omp): Add start_task, stop_task
	and resume_task as part of the "proxy" permissions for Tasks.

	* src/html/classic/omp.xsl (task-permissions-window): Remove.
	(task [details]): Use template resource-permissions-window instead of
	task-permissions-window.
	(html-create-permission-form): Add "Task" in type selection of
	multi-permissions form.

2015-04-29  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r22245.

	Add permission window for details pages of other types in the
	Configuration menu. Add permission related indicator icons.

	* src/gsad_omp.c (get_config): Add the permissions for the config.
	(create_permissions_omp): Handle permissions test_alert,
	validate_agent, validate_report_format and validate_scanner as part
	of "proxy" permissions. Correct check if related type is report.

	* src/html/classic/gsad.xsl (html-gsa-logo): Add indicator icons for
	create_permission_response, delete_permission_response and